Typo:  LaTeX/XML formatting, \matrixrep in Theorem OBUTR proof
Typo:  LaTeX/XML formatting, \lt in Theorem VRI proof (Stephen Gower)
Typo:  Implication arrow in wrong direction, Theorem IMR (Dan Messenger)
Typo:  Example LIC, second sentence, in/dependence (Aidan Meacham)
Typo:  Solution B.T50, missing implication arrows
Typo:  Sage CELT, needed symbolic variables (Tyler Ueltschi)

MAJOR SOURCE FORMAT CHANGE
~~~~~~~~~~~~~~~~~~~~~~~~~~

Version 2.99 is the last version that is guaranteed to compile from the
LaTeX sources initiated in December 2003.  Content has all migrated
to an XML format, using a one-off conversion process, custom XML tags
and LaTeX syntax for in-line and displayed mathematics.

Changes to the LaTeX sources subsequent to Version 2.99 are
designed to support the automated conversion to XML and some
new environments (e.g. "introduction", "para", "graphics") are
not implemented in the corresponding style files.  Additional
content has been integrated, such as Tikz graphics and the Sage
vignettes.

v2.99 source (as published, or with additions) may be recreated
in two ways:
(a) rolling back to the version "2.99" Mercurial tag (published version)
(b) in the new "latex" subdirectory (source with additions).


v2.99 2012/10/13
~~~~~~~~~~~~~
Omission:  Corrected discussion of inner product definition (Diego Barreiro)
Typo:  Set S is really T, discussion following Theorem BCS (Diego Barreiro)
Typo:  Miscellaneous small corrections, Sections MM, MISLE, VS, S (Diego Barreiro)
Typo:  Solution SSLE.M70, spelling (Becca Ebert)
Typo:  Small fix to new version of VO.T05 (Nick Butterfield)
Typo:  Solution LI.M50, "we that" becomes "we find that" (Dan Messenger)
Typo:  Several "the the" (Jack Gilbert)
Edit:  Theorem SLSLC statement: clarified that the vector  x  has  n  entries (Jack Gilbert)
Change:  Alignment of several exercises in Section RREF (Ameneh McCullough)
Change:  Solutions EE.C23, EE.C24 reformatted