@@ -2191,7 +2191,7 @@ The matrix representation of $T$ relative to the basis $D$ will be a diagonal ma
 </exercise>
 
 <exercise type="C" number="40" rough="Basis to yield diagonalization on S_22">
-<problem contributor="robertbeezer">Let $S_{22}$ be the vector space of $2\times 2$ symmetric matrices. Find a basis $B$ for $S_{22}$ that yields a diagonal matrix representation of the linear transformation $R$.
+<problem contributor="robertbeezer">Let $S_{22}$ be the vector space of $2\times 2$ symmetric matrices. Find a basis $C$ for $S_{22}$ that yields a diagonal matrix representation of the linear transformation $R$.
 <alignmath>
 \ltdefn{R}{S_{22}}{S_{22}},\quad
 <![CDATA[\lt{R}{\begin{bmatrix}a&b\\b&c\end{bmatrix}}=]]>
@@ -2255,8 +2255,8 @@ The three vectors that occur as basis elements for these eigenspaces will togeth
 \end{bmatrix}\\
 </alignmath>
 So the requested basis of $S_{22}$, yielding a diagonal matrix representation of $R$, is
-<equation>
-\set{
+<alignmath>
+C = \set{
 \begin{bmatrix}
 <![CDATA[-1 & -2 \\-2 & 1]]>
 \end{bmatrix}\,\
@@ -2267,7 +2267,7 @@ So the requested basis of $S_{22}$, yielding a diagonal matrix representation of
 <![CDATA[1 & 3 \\ 3 & 0]]>
 \end{bmatrix}%
 }
-</equation>
+</alignmath>
 </solution>
 </exercise>
 
