@@ -69,6 +69,7 @@ Typo:  Implication arrow in wrong direction, Theorem IMR (Dan Messenger)
 Typo:  Example LIC, second sentence, in/dependence (Aidan Meacham)
 Typo:  Solution B.T50, missing implication arrows
 Typo:  Sage CELT, needed symbolic variables (Tyler Ueltschi)
+Typo:  Solution CB.C40, uses B in solution; problem now asks for C (Tyler Ueltschi)
 
 MAJOR SOURCE FORMAT CHANGE
 ~~~~~~~~~~~~~~~~~~~~~~~~~~
